// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/Home/DBAPanel render filter status with statics number id not 0 1`] = `
<body>
  <div>
    <section
      class="css-12ylasd"
    >
      <div
        class="css-ll85ob"
      >
        <header
          class="css-1twz2l2"
        >
          <svg
            class="custom-icon"
            height="20"
            viewBox="0 0 16 16"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.333 1.333h9.334a.667.667 0 0 1 .666.667v12.762a.332.332 0 0 1-.51.283L8 12.02l-4.823 3.024a.333.333 0 0 1-.51-.282V2a.667.667 0 0 1 .666-.667m2 4.667v1.333h5.334V6z"
              fill="#7453DA"
            />
          </svg>
          待处理工单
        </header>
      </div>
      <div
        class="css-eydntv"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <div
              class="ant-segmented basic-segmented-wrapper css-18p941p"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 4px;"
                      >
                        <span>
                          需审核
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="notice-count"
                        >
                          1
                        </span>
                      </div>
                    </div>
                  </div>
                </label>
                <label
                  class="ant-segmented-item"
                >
                  <input
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 4px;"
                      >
                        <span>
                          需上线
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="notice-count"
                        >
                          1
                        </span>
                      </div>
                    </div>
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="table-limit-tips-text"
            >
              当前表格仅展示前5条数据
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only btn-icon-no-border basic-button-wrapper css-10ae2zl"
              disabled=""
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  class="custom-icon custom-icon-refresh"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-table ant-table-empty ant-table-scroll-horizontal"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 30%;"
                      />
                      <col
                        style="width: 45%;"
                      />
                      <col
                        style="width: 25%;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell dashboard-common-list-table-name-column"
                          scope="col"
                        >
                          工单名称
                        </th>
                        <th
                          class="ant-table-cell dashboard-common-list-table-desc-column"
                          scope="col"
                        >
                          工单描述
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          创建时间
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="3"
                        >
                          <div
                            class="ant-table-expanded-row-fixed"
                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`page/Home/DBAPanel render normal table 1`] = `
<body>
  <div>
    <section
      class="css-12ylasd"
    >
      <div
        class="css-ll85ob"
      >
        <header
          class="css-1twz2l2"
        >
          <svg
            class="custom-icon"
            height="20"
            viewBox="0 0 16 16"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.333 1.333h9.334a.667.667 0 0 1 .666.667v12.762a.332.332 0 0 1-.51.283L8 12.02l-4.823 3.024a.333.333 0 0 1-.51-.282V2a.667.667 0 0 1 .666-.667m2 4.667v1.333h5.334V6z"
              fill="#7453DA"
            />
          </svg>
          待处理工单
        </header>
      </div>
      <div
        class="css-eydntv"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <div
              class="ant-segmented basic-segmented-wrapper css-18p941p"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="需审核"
                  >
                    需审核
                  </div>
                </label>
                <label
                  class="ant-segmented-item"
                >
                  <input
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="需上线"
                  >
                    需上线
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="table-limit-tips-text"
            >
              当前表格仅展示前5条数据
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only btn-icon-no-border basic-button-wrapper css-10ae2zl"
              disabled=""
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  class="custom-icon custom-icon-refresh"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-table ant-table-empty ant-table-scroll-horizontal"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 30%;"
                      />
                      <col
                        style="width: 45%;"
                      />
                      <col
                        style="width: 25%;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell dashboard-common-list-table-name-column"
                          scope="col"
                        >
                          工单名称
                        </th>
                        <th
                          class="ant-table-cell dashboard-common-list-table-desc-column"
                          scope="col"
                        >
                          工单描述
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          创建时间
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="3"
                        >
                          <div
                            class="ant-table-expanded-row-fixed"
                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`page/Home/DBAPanel render table with return error 1`] = `
<body>
  <div>
    <section
      class="css-12ylasd"
    >
      <div
        class="css-ll85ob"
      >
        <header
          class="css-1twz2l2"
        >
          <svg
            class="custom-icon"
            height="20"
            viewBox="0 0 16 16"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.333 1.333h9.334a.667.667 0 0 1 .666.667v12.762a.332.332 0 0 1-.51.283L8 12.02l-4.823 3.024a.333.333 0 0 1-.51-.282V2a.667.667 0 0 1 .666-.667m2 4.667v1.333h5.334V6z"
              fill="#7453DA"
            />
          </svg>
          待处理工单
        </header>
      </div>
      <div
        class="css-eydntv"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <div
              class="ant-segmented basic-segmented-wrapper css-18p941p"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="需审核"
                  >
                    需审核
                  </div>
                </label>
                <label
                  class="ant-segmented-item"
                >
                  <input
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="需上线"
                  >
                    需上线
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="table-limit-tips-text"
            >
              当前表格仅展示前5条数据
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only btn-icon-no-border basic-button-wrapper css-10ae2zl"
              disabled=""
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  class="custom-icon custom-icon-refresh"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-table ant-table-empty ant-table-scroll-horizontal"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 30%;"
                      />
                      <col
                        style="width: 45%;"
                      />
                      <col
                        style="width: 25%;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell dashboard-common-list-table-name-column"
                          scope="col"
                        >
                          工单名称
                        </th>
                        <th
                          class="ant-table-cell dashboard-common-list-table-desc-column"
                          scope="col"
                        >
                          工单描述
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          创建时间
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="3"
                        >
                          <div
                            class="ant-table-expanded-row-fixed"
                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`page/Home/DBAPanel send request when click diff filter status 1`] = `
<body>
  <div>
    <section
      class="css-12ylasd"
    >
      <div
        class="css-ll85ob"
      >
        <header
          class="css-1twz2l2"
        >
          <svg
            class="custom-icon"
            height="20"
            viewBox="0 0 16 16"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.333 1.333h9.334a.667.667 0 0 1 .666.667v12.762a.332.332 0 0 1-.51.283L8 12.02l-4.823 3.024a.333.333 0 0 1-.51-.282V2a.667.667 0 0 1 .666-.667m2 4.667v1.333h5.334V6z"
              fill="#7453DA"
            />
          </svg>
          待处理工单
        </header>
      </div>
      <div
        class="css-eydntv"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <div
              class="ant-segmented basic-segmented-wrapper css-18p941p"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="需审核"
                  >
                    需审核
                  </div>
                </label>
                <label
                  class="ant-segmented-item"
                >
                  <input
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="需上线"
                  >
                    需上线
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="table-limit-tips-text"
            >
              当前表格仅展示前5条数据
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only btn-icon-no-border basic-button-wrapper css-10ae2zl"
              disabled=""
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  class="custom-icon custom-icon-refresh"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-table ant-table-empty ant-table-scroll-horizontal"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 30%;"
                      />
                      <col
                        style="width: 45%;"
                      />
                      <col
                        style="width: 25%;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell dashboard-common-list-table-name-column"
                          scope="col"
                        >
                          工单名称
                        </th>
                        <th
                          class="ant-table-cell dashboard-common-list-table-desc-column"
                          scope="col"
                        >
                          工单描述
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          创建时间
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="3"
                        >
                          <div
                            class="ant-table-expanded-row-fixed"
                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
